--- a/index.html
+++ b/index.html
@@ -308,13 +308,10 @@
                     המחויבות שלנו למקצועיות, מחירים הוגנים ושירות ללא תחרות היא הבסיס לכל מה שאנו עושים.
                     אנו כאן כדי להפוך את החזון הדיגיטלי שלך למציאות.
                 </p>
-                <!-- Placeholder for Logo image -->
+                <!-- Image of a tiger standing on its hind legs (from Imgur) -->
                 <div class="w-40 h-40 mx-auto mt-8 rounded-full overflow-hidden flex items-center justify-center bg-gray-700">
-                    <img src="https://placehold.co/160x160/333333/888888?text=לוגו+שלך" alt="[מקום לתמונת צוות או לוגו]" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/160x160/666666/DDDDDD?text=טעינת+תמונה+נכשלה'">
+                    <img src="https://i.imgur.com/Vfie2Jh.png" alt="[Image of an elephant standing on its hind legs]" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/160x160/666666/DDDDDD?text=טעינת+תמונה+נכשלה'">
                 </div>
-                <p class="text-sm text-gray-400 mt-2">
-                    (כאן תוכל להוסיף תמונה של פיל עומד על רגליים אחוריות, או תמונת צוות/לוגו)
-                </p>
             </div>
         </div>
     </section>
